<resources>
    <string name="app_name">Books</string>
    <string name="authors">Authors</string>
    <string name="books">Books</string>
    <string name="add_author">Add author</string>
    <string name="get_all_authors">View all authors</string>
    <string name="get_authors_without_books">Get authors without books</string>
    <string name="author_name">Name</string>
    <string name="author_secondName">SecondName</string>
    <string name="author_surname">Surname</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="empty_string"></string>
    <string name="all_books_button">All books</string>
    <string name="add_book_button">Add book</string>
    <string name="find_books_inder_price">Find book under price</string>
    <string name="find_duplicates">Find duplicates</string>
    <string name="duplicates">Duplicates list</string>
    <string name="books_list">Books list</string>
    <string name="book_name_label">Book name</string>
    <string name="book_date_published_label">Date published</string>
    <string name="book_price_label">Price</string>
    <string name="book_author_label">Author</string>
    <string name="book_pages_label">Pages count</string>
    <string name="add_book_label">Add book</string>
    <string name="update_book_label">Update book</string>
    <string name="find_action">Find</string>
    <string name="books_under_price_list">Books under price</string>
    <string name="books_count_label">Books count</string>
    <string name="books_max_price">Summary price</string>
    <string name="books_avg_price">Avarage price</string>
</resources>
