<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp_books"
    tools:context=".controller.MainBooksActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/all_books_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickShowBooksActivity"
            android:text="@string/all_books_button" />

        <Button
            android:id="@+id/add_book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAddBookActivity"
            android:text="@string/add_book_button" />

        <Button
            android:id="@+id/find_books_inder_price_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_books_inder_price" />

        <Button
            android:id="@+id/find_duplicates_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickShowDooblicateBooksActivity"
            android:text="@string/find_duplicates" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>