<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp_books"
    tools:context=".controller.book.EditBookActivity">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="729dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/book_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name_label"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/update_book_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/book_name_label"
            android:ems="10"
            android:hint="@string/book_name_label"
            android:inputType="textPersonName"
            android:text="@string/empty_string"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF" />

        <TextView
            android:id="@+id/book_date_published_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_date_published_label"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/update_book_date_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/book_price_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_price_label"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/update_book_price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF" />

        <TextView
            android:id="@+id/update_pages_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_pages_label"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/update_book_pages_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF" />

        <TextView
            android:id="@+id/book_author_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author_label"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/update_book_author_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/update_book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddClick"
            android:text="@string/update_book_label" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>