<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp"
    tools:context=".controller.MainAuthorsActivity">

    <Button
        android:id="@+id/allAuthors"
        android:layout_width="281dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:onClick="onClickShowAuthorsActivity"
        android:text="@string/get_all_authors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/withoutBooks"
        android:layout_width="280dp"
        android:layout_height="73dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:onClick="onClickShowAuthorsWithoutBooksActivity"
        android:text="@string/get_authors_without_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAuthor" />

    <Button
        android:id="@+id/addAuthor"
        android:layout_width="282dp"
        android:layout_height="74dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:onClick="onClickAddAuthorActivity"
        android:text="@string/add_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allAuthors" />

</androidx.constraintlayout.widget.ConstraintLayout>